EWL-10461: Adjust styling of related coverage block to prevent overlap, non-clickable links.

--- a/styleguide/source/assets/scss/03-organisms/_related_coverage.scss
+++ b/styleguide/source/assets/scss/03-organisms/_related_coverage.scss
@@ -1,4 +1,6 @@
 promo-embed {
+  position: relative;
+  z-index: 1;
   div[class*="related_coverage-"] {
     display: flex;
     flex-direction: column;
@@ -96,6 +98,12 @@ promo-embed {
       }
       @include breakpoint($bp-med) {
         padding-left: $gutter;
+      }
+    }
+    @include breakpoint($bp-small) {
+      + ul,
+      + p {
+        width: 50%;
       }
     }
   }
